<resources>
    <!--Strings alert answers-->
    <string name="ok">Ok</string>
    <string name="tryAgain">Try again</string>
    <string name="mainScreen">Main screen</string>
    <string name="goBack">Go back</string>

    <!-- Strings for the Main activity-->
    <string name="app_name">CAHQR</string>
    <string name="button_toScanning">Scan</string>
    <string name="button_toAdding">Create a QR code</string>
    <string name="button_toAbout">About</string>
    <string name="button_toSettings">Settings</string>

    <!--Strings for the adding activity-->
    <string name="addingPromptTextView">Please enter the text for which you want to generate QR:</string>
    <string name="addCodeSubmitButton">Submit</string>

    <string name="addingCodeAlertText">You haven\'t written anything, so no code for you!</string>

    <!--Strings for code shower activity-->
    <string name="button_saveToDevice">Save to device</string>
    <string name="internalCodePictureDescription">QR code created through CAHQR</string>
    <string name="exceptionHandlerMessage1">Uh oh, we are having a problem with</string>
    <string name="exceptionHandlerMessage2"> Would you like to go back and try again or go to the main screen?</string>

    <!--Strings for scanning activity-->
    <string name="scanningMessageToUserTextView">Currently scanning</string>
    <string name="delayMessageString">This is taking too long. Would you like to: </string>

    <!--Strings for about activity-->
    <string name="aboutHeading">About</string>
    <string name="aboutExplanation">The app reads a QR code which is presented in front of it,
        decodes it and displays the text on the screen and/or reads it out loud (these settings
        can be changed at the setting menu). It was written mostly with the idea to be used for
        card games to help visually challenged people, but could be put to other uses as well.
    </string>

    <!--Strings for reader activity-->
    <string name="textVisibility">Have text be visible</string>
    <string name="soundAvailability">Have the app read out the text</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
