<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.endarpine.cahqr.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:id="@+id/button_toScanning"
        android:text="@string/button_toScanning"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_toCreate"
        android:text="@string/button_toAdding"
        android:layout_above="@+id/button_toAbout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_toAbout"
        android:text="@string/button_toAbout"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button_toScanning"
        android:layout_alignStart="@+id/button_toScanning" />
</RelativeLayout>
